k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - develop-api.bookstore.dwarvesf.com
      secretName: develop-api.bookstore.dwarvesf.com-tls
  rules:
    - host: develop-api.bookstore.dwarvesf.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api
                port:
                  name: http
